# pseudo-9608

./: .gitignore  CONTENTS.md  FEATURES.md  LICENSE  README.md  REFERENCE.md  build  builtin.py  interpreter.py  lang.py  main.pseudo  main.py  parser.py  pseudo  pseudo.py  pyproject.toml  resolver.py  scanner.py  test
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pseudocode-package.yml
pseudo/: __init__.py  builtin.py  interpreter.py  lang.py  parser.py  resolver.py  scanner.py
pseudocode/: __init__.py  builtin.py  interpreter.py  lang.py  parser.py  pseudo.py  resolver.py  scanner.py  system.py
pseudocode/lang/: __init__.py  object.py  types.py  typesystem.py
tests/: __init__.py  test_array.py  test_bubblesort_byref.py  test_case_repeat_value.py  test_case_unmatched_type.py  test_error.py  test_insertsort_byref.py  test_procedure.py  test_pseudo.py  test_pseudocode.py  test_recursion.py  test_string_concat_convert.py  test_system.py  test_system_io_eof.py
