[tool.poetry]
name = "pseudo-9608"
version = "0.4.1"
description = "An interpreter for 9608 pseudocode"
license = "MIT"
authors = ["JS Ng <ngjunsiang@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/nyjc-computing/pseudo-9608"
repository = "https://github.com/nyjc-computing/pseudo-9608.git"
packages = [
    { include = "pseudocode" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.950"

[tool.poetry.scripts]
pseudo = 'pseudocode:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
